--- a/src/app/shop/productcard/productcard.component.css
+++ b/src/app/shop/productcard/productcard.component.css
@@ -2,4 +2,23 @@ img{
     width: 250px;
     height: 300px;
     background-size: contain;
+    padding: 1rem;
+}
+
+
+.cardtitle{
+    display: flex;
+    width: 200px;
+    text-align: center;
+}
+
+.outercard{
+    width: fit-content;
+}
+
+.prodimg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
