--- a/src/app/shop/productcard/productcard.component.html
+++ b/src/app/shop/productcard/productcard.component.html
@@ -1,7 +1,8 @@
 <div >
-    <div class="card mb-4 product-wap rounded-0">
-        <div class="card rounded-0">
-            <img class="card-img rounded-0 img-fluid" src={{productItem.image}}>
+    <div class="card mb-4 product-wap rounded-0 outercard">
+
+        <div class="card rounded-0 ">
+            <img class="card-img rounded-0 img-fluid prodimg" src={{productItem.image}} width="300px">
             <div class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
                 <ul class="list-unstyled">
                     <li><a class="btn btn-success text-white" href="shop-single.html"><i class="far fa-heart"></i></a></li>
@@ -10,8 +11,9 @@
                 </ul>
             </div>
         </div>
+
         <div class="card-body">
-            <a href="shop-single.html" class="h3 text-decoration-none">{{productItem.title}}</a>
+            <a href="shop-single.html" class="h3 text-decoration-none cardtitle">{{productItem.title}}</a>
             <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
                 <li>M/L/X/XL</li>
                 <li class="pt-2">
@@ -33,5 +35,6 @@
             </ul>
             <p class="text-center mb-0">{{productItem.price}}</p>
         </div>
+
     </div>
 </div>
